package dfki.util;


public class UserDefinedFilters {


}
