@startuml

title __UTIL's Class Diagram__\n

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedFilters {
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedFunctions {
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedFunctions.ExtractTimestampKeyedDataPoint {
          {static} - serialVersionUID : long
          + extractAscendingTimestamp()
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedFunctions.ExtractTimestampMimic {
          {static} - serialVersionUID : long
          + extractAscendingTimestamp()
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedFunctions.ZscoreNormalization {
          - zscore : ValueState<Tuple3<Integer, Double, Double>>
          + map()
          + open()
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedWindowFunctions {
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedWindowFunctions.InlierFilterFunction {
          + process()
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedWindowFunctions.MovingAverageArrayFunction {
          + process()
      }
    }
  }
  

  namespace  {
    namespace fki.util {
      class dfki.util.UserDefinedWindowFunctions.MovingAverageFunction {
          + process()
      }
    }
  }
  

  dfki.util.UserDefinedFunctions +-down- dfki.util.UserDefinedFunctions.ExtractTimestampKeyedDataPoint
  dfki.util.UserDefinedFunctions +-down- dfki.util.UserDefinedFunctions.ExtractTimestampMimic
  dfki.util.UserDefinedFunctions +-down- dfki.util.UserDefinedFunctions.ZscoreNormalization
  dfki.util.UserDefinedFunctions.ExtractTimestampKeyedDataPoint -up-|> org.apache.flink.streaming.api.functions.timestamps.AscendingTimestampExtractor
  dfki.util.UserDefinedFunctions.ExtractTimestampMimic -up-|> org.apache.flink.streaming.api.functions.timestamps.AscendingTimestampExtractor
  dfki.util.UserDefinedFunctions.ZscoreNormalization -up-|> org.apache.flink.api.common.functions.RichMapFunction
  dfki.util.UserDefinedWindowFunctions +-down- dfki.util.UserDefinedWindowFunctions.InlierFilterFunction
  dfki.util.UserDefinedWindowFunctions +-down- dfki.util.UserDefinedWindowFunctions.MovingAverageArrayFunction
  dfki.util.UserDefinedWindowFunctions +-down- dfki.util.UserDefinedWindowFunctions.MovingAverageFunction
  dfki.util.UserDefinedWindowFunctions.InlierFilterFunction -up-|> org.apache.flink.streaming.api.functions.windowing.ProcessWindowFunction
  dfki.util.UserDefinedWindowFunctions.MovingAverageArrayFunction -up-|> org.apache.flink.streaming.api.functions.windowing.ProcessWindowFunction
  dfki.util.UserDefinedWindowFunctions.MovingAverageFunction -up-|> org.apache.flink.streaming.api.functions.windowing.ProcessWindowFunction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
